@@ -2,7 +2,6 @@ package com.sakurafuld.hyperdaimc.addon.jei;
 
 import com.sakurafuld.hyperdaimc.HyperCommonConfig;
 import com.sakurafuld.hyperdaimc.content.HyperBlocks;
-import com.sakurafuld.hyperdaimc.content.HyperEntities;
 import com.sakurafuld.hyperdaimc.content.HyperItems;
 import com.sakurafuld.hyperdaimc.content.HyperRecipes;
 import com.sakurafuld.hyperdaimc.content.crafting.desk.DeskMenu;
@@ -13,17 +12,13 @@ import com.sakurafuld.hyperdaimc.content.over.materializer.MaterializerMenu;
 import com.sakurafuld.hyperdaimc.content.over.materializer.MaterializerScreen;
 import mezz.jei.api.IModPlugin;
 import mezz.jei.api.JeiPlugin;
-import mezz.jei.api.constants.VanillaTypes;
+import mezz.jei.api.helpers.IGuiHelper;
 import mezz.jei.api.registration.*;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.gui.screens.inventory.BrewingStandScreen;
 import net.minecraft.client.multiplayer.ClientLevel;
-import net.minecraft.client.resources.language.I18n;
-import net.minecraft.network.chat.Component;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.inventory.BrewingStandMenu;
 import net.minecraft.world.inventory.MenuType;
-import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.item.Items;
 import net.minecraft.world.item.alchemy.PotionUtils;
@@ -35,14 +30,13 @@ import net.minecraftforge.registries.ForgeRegistries;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 import static com.sakurafuld.hyperdaimc.infrastructure.Deets.identifier;
 
 @JeiPlugin
-public class HyperJeiPlugin implements IModPlugin {
+public class HyperJei implements IModPlugin {
     private static final ResourceLocation ID = identifier("jei");
 
     @Override
@@ -54,7 +48,7 @@ public class HyperJeiPlugin implements IModPlugin {
     @OnlyIn(Dist.CLIENT)
     public void registerRecipes(IRecipeRegistration registration) {
         this.addBrewing(registration);
-        this.addFumetsuWither(registration);
+        this.addInformation(registration);
 
         ClientLevel level = Objects.requireNonNull(Minecraft.getInstance().level);
         registration.addRecipes(DeskRecipeCategory.TYPE, level.getRecipeManager().getAllRecipesFor(HyperRecipes.DESK.get()));
@@ -63,9 +57,12 @@ public class HyperJeiPlugin implements IModPlugin {
 
     @Override
     public void registerCategories(IRecipeCategoryRegistration registration) {
-        registration.addRecipeCategories(new DeskRecipeCategory(registration.getJeiHelpers().getGuiHelper()));
-        registration.addRecipeCategories(new MaterializerRecipeCategory(registration.getJeiHelpers().getGuiHelper()));
-        registration.addRecipeCategories(new HyperBrewingRecipeCategory(registration.getJeiHelpers().getGuiHelper()));
+        IGuiHelper helper = registration.getJeiHelpers().getGuiHelper();
+        registration.addRecipeCategories(
+                new DeskRecipeCategory(helper),
+                new MaterializerRecipeCategory(helper),
+                new HyperBrewingRecipeCategory(helper),
+                new HyperInformationRecipeCategory());
     }
 
     @Override
@@ -87,7 +84,6 @@ public class HyperJeiPlugin implements IModPlugin {
     public void registerGuiHandlers(IGuiHandlerRegistration registration) {
         registration.addRecipeClickArea(DeskScreen.class, 56, 186, 14, 15, DeskRecipeCategory.TYPE);
         registration.addRecipeClickArea(MaterializerScreen.class, 46, 56, 94, 9, MaterializerRecipeCategory.TYPE);
-        registration.addRecipeClickArea(BrewingStandScreen.class, 97, 16, 14, 30, HyperBrewingRecipeCategory.TYPE);
 
         registration.addGhostIngredientHandler(VRXScreen.class, new VRXGhostIngredientHandler());
     }
@@ -96,7 +92,7 @@ public class HyperJeiPlugin implements IModPlugin {
         if (!HyperCommonConfig.FUMETSU_RECIPE.get())
             return;
 
-        HyperBrewingRecipe chemicalMAX = HyperBrewingRecipe.unknownSteps(
+        HyperBrewingRecipe chemicalMAX = HyperBrewingRecipe.bugStar(
                 identifier("chemical_max"),
                 List.of(HyperItems.CHEMICAL_MAX.get().getDefaultInstance()),
                 Stream.of(Items.POTION, Items.SPLASH_POTION, Items.LINGERING_POTION)
@@ -106,16 +102,7 @@ public class HyperJeiPlugin implements IModPlugin {
                         .toList(),
                 HyperItems.GOD_SIGIL.get().getDefaultInstance());
 
-//        IJeiBrewingRecipe chemicalMAX = registration.getVanillaRecipeFactory().createBrewingRecipe(
-//                List.of(HyperItems.GOD_SIGIL.get().getDefaultInstance()),
-//                Stream.of(Items.POTION, Items.SPLASH_POTION, Items.LINGERING_POTION)
-//                        .flatMap(bottle -> StreamSupport.stream(ForgeRegistries.POTIONS.spliterator(), false)
-//                                .filter(potion -> potion != Potions.EMPTY)
-//                                .map(potion -> PotionUtils.setPotion(new ItemStack(bottle), potion)))
-//                        .toList(),
-//                HyperItems.CHEMICAL_MAX.get().getDefaultInstance(), identifier("chemical_max"));
-
-        HyperBrewingRecipe fumetsuSkulls = HyperBrewingRecipe.randomSteps(
+        HyperBrewingRecipe fumetsuSkulls = HyperBrewingRecipe.skulls(
                 identifier("fumetsu_skull"),
                 Stream.of(HyperBlocks.FUMETSU_LEFT, HyperBlocks.FUMETSU_SKULL, HyperBlocks.FUMETSU_RIGHT)
                         .map(object -> object.get().asItem().getDefaultInstance())
@@ -123,37 +110,21 @@ public class HyperJeiPlugin implements IModPlugin {
                 List.of(HyperItems.CHEMICAL_MAX.get().getDefaultInstance()),
                 Items.NETHER_STAR.getDefaultInstance());
         registration.addRecipes(HyperBrewingRecipeCategory.TYPE, List.of(chemicalMAX, fumetsuSkulls));
-//        registration.addRecipes(RecipeTypes.BREWING, List.of(new HyperJeiBrewingRecipe(chemicalMAX, () -> Integer.MAX_VALUE), new HyperJeiBrewingRecipe(fumetsuSkull, new IntSupplier() {
-//            private final Random RANDOM = new Random();
-//            private long lastTime = 0;
-//            private int lastStep = 0;
-//
-//            @Override
-//            public int getAsInt() {
-//                if (Util.getMillis() - this.lastTime > 50) {
-//                    this.lastTime = Util.getMillis();
-//                    double delta = Math.min(1, ((Math.cos(this.lastTime / 800d) + 1) / 2d));
-//                    delta = Calculates.curve(delta, 0, 0.00001, 0.0002, 1);
-//                    int inaccuracy = (int) (delta * 50000000);
-//                    this.lastStep = inaccuracy - RANDOM.nextInt(inaccuracy / 2 + 1);
-//                }
-//                return this.lastStep;
-//            }
-//        })));
     }
 
-    private void addFumetsuWither(IRecipeRegistration registration) {
-        if (!HyperCommonConfig.FUMETSU_SUMMON.get())
-            return;
-
-        List<ItemStack> fumetsuWither = Stream.of(HyperItems.GOD_SIGIL.get(), HyperBlocks.SOUL.get().asItem(), HyperBlocks.FUMETSU_LEFT.get().asItem(), HyperBlocks.FUMETSU_SKULL.get().asItem(), HyperBlocks.FUMETSU_RIGHT.get().asItem(), HyperItems.BUG_STARS.get(0).get())
-                .map(Item::getDefaultInstance)
-                .toList();
-        List<String> fumetsuWitherParameter = fumetsuWither.stream()
-                .map(stack -> I18n.get(stack.getDescriptionId()))
-                .collect(Collectors.toList());
-        fumetsuWitherParameter.add(HyperEntities.FUMETSU.get().getDescription().getString());
-
-        registration.addIngredientInfo(fumetsuWither, VanillaTypes.ITEM_STACK, Component.translatable("information.hyperdaimc.fumetsu_wither.0", fumetsuWitherParameter.toArray(Object[]::new)));
+    private void addInformation(IRecipeRegistration registration) {
+        registration.addRecipes(HyperInformationRecipeCategory.TYPE, List.of(new ChemicalInformation(registration.getJeiHelpers().getGuiHelper())));
+        if (HyperCommonConfig.FUMETSU_SUMMON.get()) {
+            registration.addRecipes(HyperInformationRecipeCategory.TYPE, List.of(new FumetsuInformation(registration.getJeiHelpers().getGuiHelper())));
+//            List<ItemStack> fumetsuWither = Stream.of(HyperItems.GOD_SIGIL.get(), HyperBlocks.SOUL.get().asItem(), HyperBlocks.FUMETSU_LEFT.get().asItem(), HyperBlocks.FUMETSU_SKULL.get().asItem(), HyperBlocks.FUMETSU_RIGHT.get().asItem(), HyperItems.BUG_STARS.get(0).get())
+//                    .map(Item::getDefaultInstance)
+//                    .toList();
+//            List<String> fumetsuWitherParameter = fumetsuWither.stream()
+//                    .map(stack -> I18n.get(stack.getDescriptionId()))
+//                    .collect(Collectors.toList());
+//            fumetsuWitherParameter.add(HyperEntities.FUMETSU.get().getDescription().getString());
+//
+//            registration.addIngredientInfo(fumetsuWither, VanillaTypes.ITEM_STACK, Component.translatable("information.hyperdaimc.fumetsu_wither.0", fumetsuWitherParameter.toArray(Object[]::new)));
+        }
     }
 }
